Fix being unable to click the scrollbar
0_0

--- a/src/scss/common/questions.scss
+++ b/src/scss/common/questions.scss
@@ -303,7 +303,9 @@ button {
 .cloze-question {
   .katex {
     overflow-y: auto !important;
-    pointer-events: none;
+    * {
+      pointer-events: none;
+    }
   }
   .cloze-draggable {
     pointer-events: all;
